// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`price-bluna successful calls return success when fetching the USD/BLuna price 1`] = `
Object {
  "data": Object {
    "result": "26201174257498453414",
  },
  "jobRunID": "1",
  "result": "26201174257498453414",
  "statusCode": 200,
}
`;

exports[`price-bluna successful calls returns success when fetching the BTC/BLuna price 1`] = `
Object {
  "data": Object {
    "result": "1000007186099738228",
  },
  "jobRunID": "1",
  "result": "1000007186099738228",
  "statusCode": 200,
}
`;

exports[`price-bluna successful calls returns success when fetching the ETH/BLuna price 1`] = `
Object {
  "data": Object {
    "result": "1000007186099738228",
  },
  "jobRunID": "1",
  "result": "1000007186099738228",
  "statusCode": 200,
}
`;
